--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     margin: 0 auto;
     font-family: 'Raleway', sans-serif;
     background-color: #F0F2F6;
-
+    padding: 30px 30px;
 }
 
 
@@ -18,7 +18,7 @@ header .barre-navigation {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    padding: 30px 30px;
+
 
 
 }
@@ -46,12 +46,7 @@ header .barre-navigation .liens a:hover {
 
 /*----------------------Début barre de navigation-----------------*/
 
-nav {
-    padding: 30px 30px;
-}
-
-
-.hebergement .barre-recherche {
+nav .hebergement .barre-recherche {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -201,19 +196,18 @@ nav .info i {
 section {
     display: flex;
     flex-wrap: wrap;
+    padding-top: 25px;
 }
 
 /*-------------------------------------Début Section <article>------------------------------------------*/
-section {
-    padding: 30px 30px;
-}
 
 section article {
     background: #8a4e4e;
     border-radius: 20px;
     padding-top: 15px;
-    width: 800px;
+    width: 760px;
     padding-left: 25px;
+
 }
 
 section article h2 {
@@ -237,8 +231,8 @@ section article i {
 section article img {
     border: 5px solid #FFFFFF;
     border-radius: 20px 20px 0px 0px;
-    width: 210px;
-    height: 140px;
+    width: 218px;
+    height: 120px;
 }
 
 /*---------------------------------------------1re ligne------------------------------------*/
@@ -247,6 +241,7 @@ section article .first-choice {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+
     margin-bottom: 15px;
 }
 
@@ -323,7 +318,7 @@ article .second-choice .option-6 {
 
 aside {
     margin-left: 30px;
-    background-color: rebeccapurple;
+    background-color: rgb(70, 17, 124);
     width: 400px;
     border-radius: 20px;
     padding-top: 15px;
@@ -354,7 +349,7 @@ aside i {
 
 aside .populaires {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
     margin-left: 20px;
     margin-right: 20px;
@@ -376,7 +371,7 @@ aside .populaires .description {
 
 aside .populaires .image-1 {
     background-color: #D9D9D9;
-
+    display: flex;
     border-radius: 20px;
     margin-bottom: 20px;
     padding-bottom: 5px;
@@ -385,6 +380,7 @@ aside .populaires .image-1 {
 /*----------------------------Image-2-------------------------------*/
 
 aside .populaires .image-2 {
+    display: flex;
     background-color: #D9D9D9;
     border-radius: 20px;
     margin-bottom: 20px;
@@ -395,8 +391,35 @@ aside .populaires .image-2 {
 /*----------------------------Image-3-------------------------------*/
 
 aside .populaires .image-3 {
+    display: flex;
+
     background-color: #D9D9D9;
     border-radius: 20px;
     margin-bottom: 20px;
     padding-bottom: 5px;
+}
+
+/*------------------------------------------------ Début main---------------------*/
+
+main {
+    padding-top: 25px;
+}
+
+main .ativités {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+main .ativités .vieux-port {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    background-image: url("images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg");
+    width: 302px;
+    height: 444px;
+    border-radius: 20px;
+    background-size: cover;
+    background-position: center;
 }
