--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -395,7 +395,7 @@ body {
 
 
 /*----------------------Début nav-----------------*/
-nav .barre-navigation {
+nav {
 
     display: flex;
     flex-wrap: wrap;
@@ -407,24 +407,31 @@ nav .barre-navigation {
 }
 
 
-nav.barre-navigation .logo img {
+nav img {
 
-    width: 61.09px;
-    height: 19px;
+    width: 80px;
+    height: 25px;
     left: 0px;
     top: 0px;
 }
 
-nav .barre-navigation .liens a {
-    text-decoration: none;
-    padding-left: 40px;
+nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+
     color: black;
     border: solid #F0F2F6 1px;
 }
 
-nav .barre-navigation .liens a:hover {
-    color: var(--color);
+nav ul li {
+    padding-left: 20px;
+}
+
+nav li:hover {
+    color: #0065FC;
     border-top: #0065FC solid 1px;
+    border
 }
 
 /*----------------------Début barre de navigation-----------------*/
@@ -435,11 +442,13 @@ header .hebergement .barre-recherche {
     align-items: center;
     padding: 15px 16px;
     gap: 10px;
-    width: 132px;
+    width: 100%;
+    max-width: 300px;
     height: 49px;
-    left: 341px;
-    top: 199px;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 
 header .barre-recherche {
     display: flex;
@@ -629,76 +638,30 @@ section article .first-choice {
 }
 
 
-/*------------------------Option 1-----------*/
-
-article .first-choice .option-1 {
+article .first-choice .option {
     background-color: #FFFFFF;
     border: 5px solid #FFFFFF;
     border-radius: 20px 20px 20px 20px;
     margin-right: 10px;
 }
 
-/*------------------------ Option 2-----------*/
-
-article .first-choice .option-2 {
-    background-color: #FFFFFF;
-    border: 5px solid #FFFFFF;
-    border-radius: 20px 20px 20px 20px;
-    margin-right: 10px;
-}
-
-/*------------------------  Option 3-----------*/
-
-article .first-choice .option-3 {
-    background-color: #FFFFFF;
-    border: 5px solid #FFFFFF;
-    border-radius: 20px 20px 20px 20px;
-    margin-right: 10px;
-}
-
-/*-----------------------------------------------2eme ligne--------------------------------------------*/
-
+/*---------------------------------------------2eme ligne------------------------------------*/
 section article .second-choice {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-
 }
 
-
-/*------------------------  Option 4-----------*/
-
-article .second-choice .option-4 {
+article .second-choice .option {
     background-color: #FFFFFF;
     border: 5px solid #FFFFFF;
     border-radius: 20px 20px 20px 20px;
     margin-right: 10px;
-}
-
-/*------------------------ Option 5-----------*/
-
-article .second-choice .option-5 {
-    background-color: #FFFFFF;
-    border: 5px solid #FFFFFF;
-    border-radius: 20px 20px 20px 20px;
-    margin-right: 10px;
-}
-
-/*------------------------ Option 6-----------*/
-
-article .second-choice .option-6 {
-    background-color: #FFFFFF;
-    border: 5px solid #FFFFFF;
-    border-radius: 20px 20px 20px 20px;
-    margin-right: 10px;
-    margin-bottom: 20px;
 }
 
 /*-----------------------------------------------------Fin section <article>---------------------------------------*/
 
 /*----------------------------------------------------Début section aside-------------------------------------*/
-
-
 aside {
     margin-left: 30px;
     background-color: rgb(70, 17, 124);
@@ -745,38 +708,9 @@ aside .populaires img {
     height: 90px;
 }
 
-aside .populaires .description {
-    width: 190px;
-    font-size: small;
-}
-
-/*----------------------------Image-1-------------------------------*/
-
-aside .populaires .image-1 {
+aside .populaires .choix {
     background-color: #D9D9D9;
     display: flex;
-    border-radius: 20px;
-    margin-bottom: 20px;
-    padding-bottom: 5px;
-}
-
-/*----------------------------Image-2-------------------------------*/
-
-aside .populaires .image-2 {
-    display: flex;
-    background-color: #D9D9D9;
-    border-radius: 20px;
-    margin-bottom: 20px;
-    padding-bottom: 5px;
-}
-
-
-/*----------------------------Image-3-------------------------------*/
-
-aside .populaires .image-3 {
-    display: flex;
-
-    background-color: #D9D9D9;
     border-radius: 20px;
     margin-bottom: 20px;
     padding-bottom: 5px;
@@ -788,24 +722,32 @@ main {
     padding-top: 25px;
 }
 
+
 main img {
     width: 302px;
     height: 444px;
+    border-radius: 20px 20px 0px 0px;
+}
+
+main a {
+    text-decoration: none;
+    color: #000000;
 }
 
 main .ativités {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
-/*------------------------------------------1re carte-----------------------*/
-main .activités .card {
+main h4 {
+    border-radius: 0px 0px 20px 0px;
+}
 
+main .activités .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-
 }
 
 .card:hover {
@@ -817,46 +759,3 @@ main .activités .card {
 }
 
 /*--------------------------------------------2eme carte--------------*/
-
-main .ativités .pomègues {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    background-image: url("images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg");
-    width: 302px;
-    height: 444px;
-    border-radius: 20px;
-    background-size: cover;
-    background-position: center bottom;
-
-    padding-bottom: 50px;
-
-    text-align: center
-}
-
-
-/*--------------------------------------------3eme carte--------------*/
-
-main .ativités .calanques {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    background-image: url("images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg");
-    width: 302px;
-    height: 444px;
-    border-radius: 20px;
-    background-size: cover;
-    background-position: center;
-}
-
-main .ativités .notre-dame {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    background-image: url("images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg");
-    width: 302px;
-    height: 444px;
-    border-radius: 20px;
-    background-size: cover;
-    background-position: center;
-}
