--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -401,9 +401,6 @@ nav {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-
-
-
 }
 
 
@@ -598,15 +595,17 @@ section article {
     border-radius: 20px;
     padding-top: 15px;
     width: 760px;
+    height: 685px;
     padding-left: 25px;
 
-}
 
-section article h2 {
-    color: #000000;
 }
 
 section article h3 {
+    color: #000000;
+}
+
+section article p {
     color: #000000;
 }
 
@@ -665,7 +664,8 @@ article .second-choice .option {
 aside {
     margin-left: 30px;
     background-color: rgb(70, 17, 124);
-    width: 400px;
+    width: 450px;
+    height: 685px;
     border-radius: 20px;
     padding-top: 15px;
 }
@@ -675,11 +675,11 @@ aside h1 {
     font-weight: 1000;
 }
 
-aside h2 {
+aside h3 {
     color: #000000;
 }
 
-aside h3 {
+aside p {
     color: #000000;
 }
 
@@ -709,12 +709,15 @@ aside .populaires img {
 }
 
 aside .populaires .choix {
+    width: 380px;
     background-color: #D9D9D9;
-    display: flex;
     border-radius: 20px;
     margin-bottom: 20px;
     padding-bottom: 5px;
+
+
 }
+
 
 /*------------------------------------------------ Début main---------------------*/
 
@@ -724,8 +727,8 @@ main {
 
 
 main img {
-    width: 302px;
-    height: 444px;
+    width: 310px;
+    height: 350px;
     border-radius: 20px 20px 0px 0px;
 }
 
@@ -741,13 +744,11 @@ main .ativités {
     justify-content: space-between;
 }
 
-main h4 {
-    border-radius: 0px 0px 20px 0px;
-}
 
 main .activités .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+
 }
 
 .card:hover {
@@ -758,4 +759,46 @@ main .activités .card {
     padding: 2px 16px;
 }
 
-/*--------------------------------------------2eme carte--------------*/
+
+
+/*----------------------------- Footer--------*/
+
+footer {
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-color: #ececec;
+
+
+}
+
+footer p {
+    font-weight: bold;
+    padding-top: 10px;
+
+}
+
+footer a {
+    text-decoration: none;
+    color: #000000;
+
+}
+
+footer ul {
+    padding-left: -10px;
+    margin-top: -20px;
+}
+
+footer ul li {
+    list-style-type: none;
+
+}
+
+footer .contenair {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 10px;
+}
