--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -591,7 +591,7 @@ section {
 /*-------------------------------------Début Section <article>------------------------------------------*/
 
 section article {
-    background: #8a4e4e;
+    background: #ececec;
     border-radius: 20px;
     padding-top: 15px;
     width: 760px;
@@ -663,16 +663,21 @@ article .second-choice .option {
 /*----------------------------------------------------Début section aside-------------------------------------*/
 aside {
     margin-left: 30px;
-    background-color: rgb(70, 17, 124);
+    background-color: #ececec;
     width: 450px;
     height: 685px;
     border-radius: 20px;
     padding-top: 15px;
 }
 
-aside h1 {
+aside h2 {
     padding-left: 30px;
-    font-weight: 1000;
+    display: flex;
+    justify-content: space-between;
+}
+
+aside i {
+    padding-right: 30px;
 }
 
 aside h3 {
@@ -691,32 +696,42 @@ aside i {
     color: #0065FC;
 }
 
+aside img {
+    width: 220px;
+    height: 500;
+}
+
 
 
 aside .populaires {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 10px 20px 0px 20px;
     margin-right: 20px;
+
 }
 
 aside .populaires img {
     border: 5px solid #FFFFFF;
-    border-radius: 20px 20px 0px 0px;
-    width: 120px;
-    height: 90px;
+    border-radius: 20px 0px 0px 20px;
 }
 
 aside .populaires .choix {
-    width: 380px;
-    background-color: #D9D9D9;
+    width: 400px;
+    background-color: #FFFFFF;
     border-radius: 20px;
     margin-bottom: 20px;
-    padding-bottom: 5px;
 
-
+    display: flex;
+    justify-content: space-around;
 }
+
+aside .populaires .choix .gauche {
+    padding-right: 5px;
+}
+
+
 
 
 /*------------------------------------------------ Début main---------------------*/
@@ -764,35 +779,18 @@ main .activités .card {
 /*----------------------------- Footer--------*/
 
 footer {
+
     margin-top: 30px;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
     background-color: #ececec;
-
-
-}
-
-footer p {
-    font-weight: bold;
-    padding-top: 10px;
-
 }
 
 footer a {
     text-decoration: none;
     color: #000000;
-
-}
-
-footer ul {
-    padding-left: -10px;
-    margin-top: -20px;
-}
-
-footer ul li {
-    list-style-type: none;
 
 }
 
