--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,21 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Raleway:wght@300&family=Roboto:wght@100;300;400&display=swap');
-
-@import-normalize;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Raleway:wght@300&family=Roboto:wght@100;300;400&display=swap");
+@import url("https://necolas.github.io/normalize.css/8.0.1/normalize.css");
 
 
 /*-----------------------------------------------------Css Booki-----------------------------------------*/
 
 body {
     max-width: 1400px;
-    margin: 0 auto;
+    margin: 0;
     font-family: 'Raleway', sans-serif;
     background-color: #F0F2F6;
     padding: 30px 30px;
-
 }
 
 
 /*----------------------Début nav-----------------*/
 nav {
-
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -28,7 +25,6 @@ nav {
 
 
 nav img {
-
     width: 80px;
     height: 25px;
     left: 0px;
@@ -46,13 +42,22 @@ nav ul {
 
 nav ul li {
     padding-left: 20px;
+    position: relative;
 }
 
 nav li:hover {
     color: #0065FC;
-    border-top: #0065FC solid 1px;
+}
 
-
+nav li:hover::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -45px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #0065FC;
 }
 
 nav a {
@@ -65,7 +70,7 @@ header {
     padding-top: 25px;
 }
 
-header .hebergement .barre-recherche {
+header .container .barre-recherche {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -103,7 +108,6 @@ header .barre-recherche form input {
     margin-right: -4px;
     padding-left: -10px;
     border: hidden;
-
 }
 
 
@@ -125,11 +129,11 @@ header .barre-recherche button {
     color: #FFFFFF;
 }
 
-header .barre-recherche i {
+header .barre-recherche .fa-location-dot {
     color: #000000;
     width: 50px;
     height: 50px;
-    background-color: #e4dede;
+    background-color: #c2c2c2;
     border: 1px solid #F2F2F2;
     border-radius: 15px 0px 0px 15px;
     display: flex;
@@ -138,23 +142,24 @@ header .barre-recherche i {
     margin-right: 0px;
 }
 
+header .barre-recherche button .fa-magnifying-glass {
+    display: none;
+}
+
 header .filtres {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-
-    margin-top: 20px;
+    padding-top: 25px;
 
 }
 
-header .filtres h3 {
-    margin-right: 60px;
+header .filtres h2 {
+    margin-right: 55px;
     font-family: 'Raleway';
     font-style: normal;
-    font-weight: 1000;
-    font-size: 18px;
+    font-weight: bold;
     line-height: 21px;
-
 }
 
 header .filtres button {
