--- a/css/style.css
+++ b/css/style.css
@@ -235,11 +235,10 @@ section article i {
 
 
 section article img {
-    border: 5px solid #FFFFFF;
-    border-radius: 20px 20px 0px 0px;
     width: 212px;
     height: 125px;
-    box-sizing: border-box
+    box-sizing: border-box;
+    border-radius: 20px 20px 0px 0px;
 }
 
 /*---------------------------------------------1re ligne------------------------------------*/
