--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,17 @@ header i.fa-location-dot {
     font-weight: 500;
     background-color: var(--blue);
     color: var(--white);
+    margin-left: -4.5px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.desktop-button:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.desktop-button:active {
+    box-shadow: 0 10px 18px 0 rgba(0, 0, 0, 0.4);
 }
 
 .mobile-button {
@@ -114,228 +125,84 @@ header i.fa-location-dot {
     color: var(--dark);
 }
 
+header input {
+    padding: 15px 13px;
+    margin-left: -4.5px;
+    border: 1px solid var(--grey);
+    border: hidden;
+
+}
+
+header ::placeholder {
+    color: #000000;
+    font-style: normal;
+    font-weight: bold;
+}
+
+header input:active {
+    border-color: var(--grey);
+}
 
 
-/*--------------------------------------------SECTION------------------------------------------------*/
+
+/*--------------------------------------------SECTION "filtres"------------------------------------------------*/
 
 section {
     display: flex;
     flex-wrap: wrap;
-    padding-top: 25px;
-}
-
-/*-------------------------------------Début Section <article>------------------------------------------*/
-
-section article {
-    background: #ececec;
-    border-radius: 20px;
-    padding-top: 15px;
-    width: 790px;
-    height: 685px;
-    padding-left: 60px;
-}
-
-
-section article a {
-    text-decoration: none;
-    color: #000000;
-}
-
-section article i {
-    color: #0065FC;
-}
-
-
-section article img {
-    width: 212px;
-    height: 125px;
-    box-sizing: border-box;
-    border-radius: 20px 20px 0px 0px;
-}
-
-/*---------------------------------------------1re ligne------------------------------------*/
-
-section article .first-choice {
-    display: flex;
-    flex-wrap: wrap;
     align-items: center;
-    margin-bottom: 15px;
+    padding-top: 20px;
 }
 
-article .first-choice .option:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+section h2 {
+    margin-right: 50px;
 }
 
-
-article .first-choice .option {
-    background-color: #FFFFFF;
-    border: 5px solid #FFFFFF;
-    border-radius: 20px 20px 20px 20px;
-    margin-right: 10px;
-    width: 220px;
-    height: 250px;
-}
-
-/*---------------------------------------------2eme ligne------------------------------------*/
-section article .second-choice {
+section ul {
+    list-style-type: none;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+
 }
 
-article .second-choice .option {
-    background-color: #FFFFFF;
-    border: 5px solid #FFFFFF;
-    border-radius: 20px 20px 20px 20px;
-    margin-right: 10px;
-    width: 220px;
-    height: 250px;
+section li {
+    margin-right: 50px;
+    border: 1px solid rgb(196, 195, 195);
+    border-radius: 20px 20px;
+    padding: 10px 10px;
+    font-weight: bold;
 }
 
-article .second-choice .option:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-/*-----------------------------------------------------Fin section <article>---------------------------------------*/
-
-/*----------------------------------------------------Début section aside-------------------------------------*/
-aside {
-    margin-left: 30px;
-    background-color: #ececec;
-    width: 420px;
-    height: 685px;
-    border-radius: 20px;
-    padding-top: 15px;
-}
-
-aside h2 {
-    padding-left: 30px;
-    display: flex;
-    justify-content: space-between;
-}
-
-aside h2 i {
-    padding-right: 30px;
+section i {
     color: #0065FC;
 }
 
-
-aside a {
-    text-decoration: none;
-    color: #000000;
+section li:hover {
+    background-color: #c6d9f5;
 }
 
-aside .populaires i {
-    color: #0065FC;
-}
-
-aside img {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-}
-
-aside .populaires {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 10px 20px 0px 20px;
-    margin-right: 20px;
-}
-
-aside .populaires img {
-    border: 5px solid #FFFFFF;
-    border-radius: 20px 0px 0px 20px;
-}
-
-aside .populaires .choix {
-    width: 350px;
-    height: 150px;
-    background-color: #FFFFFF;
-    border-radius: 20px;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
-    display: flex;
-    justify-content: space-around;
-}
-
-aside .populaires .choix .gauche {
-    padding-right: 5px;
-    width: 50%;
-}
-
-aside .populaires .choix .droite {
-    padding-right: 5px;
-    width: 50%;
-}
-
-
-aside .populaires .choix:hover {
+section li:active {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-/*------------------------------------------------ Début main---------------------*/
+.fa-info {
+    color: #0065FC;
+    border: 1px solid rgb(196, 195, 195);
+    padding: 5px 10px;
+    border-radius: 15px 15px;
+}
+
+/*-------------------------------------fin SECTION "filtres"-----------------------------------------*/
+
+
+
+/*--------------------------------------- Début main <section "hebergement">---------------------*/
 
 main {
-    padding-top: 25px;
-}
-
-main img {
-    width: 310px;
-    height: 350px;
-    border-radius: 20px 20px 0px 0px;
-}
-
-main a {
-    text-decoration: none;
-    color: #000000;
-}
-
-main .ativités {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
+    bac
 }
 
 
-main .activités .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-}
-
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-.activités {
-    padding: 2px 16px;
-}
-
-/*----------------------------- Footer--------*/
-
-footer {
-    margin-top: 30px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    background-color: #ececec;
-}
-
-footer a {
-    text-decoration: none;
-    color: #000000;
-}
-
-footer .contenair {
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-    padding-bottom: 10px;
-}
 
 /*------------------------------------- responsive------------------------*/
 
