--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,8 @@ article {
     border-radius: 30px;
     width: 90%;
     height: 150px;
-    background-color: white
+    background-color: white;
+    margin-right: 30px;
 }
 
 .note-populaire {
@@ -412,9 +413,9 @@ aside .activités {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
-    margin-left: -20px;
-    margin-right: 20px;
+    justify-content: flex-start;
+    margin-left: -35px;
+
 }
 
 aside a {
@@ -423,23 +424,23 @@ aside a {
 }
 
 .carte-activité {
-    width: 220px;
-    height: 390px;
+    width: 260px;
+    height: 430px;
     border: 1px white solid;
     border-radius: 20px 20px 20px 20px;
-    margin-right: 50px;
+
 }
 
 .img-activité {
-    width: 272px;
-    height: 410px;
+    width: 260px;
+    height: 390px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
 
 
 .carte-activité:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px 6px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 }
 
@@ -451,7 +452,7 @@ footer {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
-    background-color: var(--blue);
+    background-color: rgb(230, 230, 230);
 }
 
 footer a {
@@ -532,7 +533,7 @@ footer li:hover {
     }
 
     .hebergement {
-        background-color: rgb(69, 199, 57);
+        background-color: rgb(230, 230, 230);
         width: 100%;
     }
 
@@ -554,8 +555,8 @@ footer li:hover {
         margin-bottom: 10px;
         border: 2px white solid;
         border-radius: 30px;
-        width: 215px;
-        height: 220px;
+        width: 200px;
+        height: 210px;
         background-color: white;
         margin-right: 3px;
     }
@@ -564,15 +565,14 @@ footer li:hover {
         object-fit: cover;
         border: 2px white solid;
         border-radius: 30px 30px 0 0;
-        height: 120px;
-        width: 210px;
+        height: 110px;
+        width: 195px;
         align-items: center;
     }
 
 
     .description-carte h3 {
         font-size: 15px;
-
     }
 
     .description-carte p {
@@ -585,36 +585,91 @@ footer li:hover {
 
     /*--------------------------------------- Début main <article>---------------------*/
     article {
-        background-color: rgb(111, 78, 189);
+        background-color: rgb(230, 230, 230);
         display: flex;
-
-        justify-content: ;
+        margin-top: 25px;
         width: 100%;
         height: 300px;
         border: 1px solid #f2f2f2;
         border-radius: 30px;
     }
 
+    .plus-populaires h2 {
+        font-size: 17px;
+    }
+
     .plus-populaires ul {
         display: flex;
         flex-direction: row;
-        margin-left: 0;
+        margin-left: -5px;
     }
 
     .carte-populaire {
         display: flex;
+        flex-direction: row;
         margin: auto;
         margin-bottom: 40px;
         border: 1px white solid;
         border-radius: 30px;
-        width: 80%;
-        height: 150px;
-        background-color: white
+        width: 210px;
+        height: 130px;
+        background-color: white;
+        margin-right: 10px;
+    }
+
+    .img-populaires {
+        width: 90px;
     }
 
     .texte-populaire h3 {
-        font-size: 15px;
+        font-size: 12px;
+        font-weight: bolder;
     }
+
+    .texte-populaire p {
+        font-size: 12px;
+    }
+
+    .note-populaire {
+        padding-top: 20px;
+    }
+
+    /*-----------------------------------------------Activité <aside> -----------------------*/
+    aside .activités {
+        display: flex;
+    }
+
+    aside h2 {
+        margin-top: 25px;
+    }
+
+    aside a {
+        color: #000;
+        text-decoration: none;
+    }
+
+    .carte-activité {
+        width: 140px;
+        height: 250px;
+        border: 1px white solid;
+        border-radius: 20px 20px 20px 20px;
+        margin: 0;
+        margin-left: 25px;
+    }
+
+    .img-activité {
+        width: 140px;
+        height: 200px;
+        border-radius: 20px 20px 0 0;
+        object-fit: cover;
+    }
+
+    .carte-activité:hover {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+    }
+
+
 }
 
 
